--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@types/graphql": "^14.2.3",
     "@types/safe-json-stringify": "^1.1.5",
     "apollo-server-micro": "^3.13.0",
     "axios": "^1.7.7",
@@ -57,6 +58,8 @@
     "graphql-fields": "^2.0.3",
     "graphql-scalars": "^1.23.0",
     "input-otp": "^1.2.4",
+    "json-schema": "^0.4.0",
+    "long": "^5.2.3",
     "lucide-react": "^0.441.0",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
@@ -84,9 +87,10 @@
   },
   "devDependencies": {
     "@types/graphql-fields": "^1.3.9",
+    "@types/json-schema": "^7.0.15",
     "@types/micro-cors": "^0.1.5",
     "@types/next-auth": "^3.15.0",
-    "@types/node": "20",
+    "@types/node": "^20.17.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
@@ -94,7 +98,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.4.0",
-    "typegraphql-prisma": "^0.18.4",
+    "typegraphql-prisma": "^0.28.0",
     "typescript": "^5"
   }
 }
