--- a/package.json
+++ b/package.json
@@ -64,13 +64,13 @@
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
     "nanoid": "^5.0.7",
-    "next": "14.2.11",
+    "next": "^14.2.11",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "prisma": "^5.19.1",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
